@@ -30,10 +30,12 @@
  * (C) Copyright 2003-2007, by Richard Atkinson and Contributors.
  *
  * Original Author:  Richard Atkinson;
+ * Contributors:     David Gilbert (for Object Refinery Limited);
  *
  * Changes
  * -------
  * 12-Aug-2003 : Version 1 (RA);
+ * 04-Dec-2007 : Escape URL text to fix bug 1400917 (DG);
  * 
  */
  
@@ -43,8 +45,15 @@ package org.jfree.chart.imagemap;
  * Generates URLs using the HTML href attribute for image map area tags.
  */
 public class StandardURLTagFragmentGenerator 
-    implements URLTagFragmentGenerator {
+        implements URLTagFragmentGenerator {
 
+	/**
+	 * Creates a new instance.
+	 */
+	public StandardURLTagFragmentGenerator() {
+		super();
+	}
+	
     /**
      * Generates a URL string to go in an HTML image map.
      *
@@ -53,7 +62,7 @@ public class StandardURLTagFragmentGenerator
      * @return The formatted text
      */
     public String generateURLFragment(String urlText) {
-        return " href=\"" + urlText + "\"";
+        return " href=\"" + ImageMapUtilities.htmlEscape(urlText) + "\"";
     }
 
 }
