@@ -1,5 +1,16 @@
 2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/imagemap/DynamicDriveToolTipFragmentGenerator.java
+    (generateToolTipFragment): Escape text,
+    * source/org/jfree/chart/imagemap/OverLIBToolTipFragmentGenerator.java
+    (generateToolTipFragment): Likewise,
+    * source/org/jfree/chart/imagemap/StandardToolTipFragmentGenerator.java
+    (generateToolTipFragment): Likewise,
+    * source/org/jfree/chart/imagemap/StandardURLTagFragmentGenerator.java
+    (generateURLFragment): Likewise.
+
+2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/AbstractRenderer.java
 	(hashCode): Compute using more fields.
 
